--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,19 @@
 *{
 margin: 0;
 }
-
+body{
+  background-color: rgb(252, 238, 238);
+}
 .header{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: blue;
   margin-bottom: 12px;
 }
 
 .app__stats{
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
 background-color: blueviolet;
 }
