--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@ display: flex;
 justify-content: space-around;
 
 }
+
+@media screen and (max-width: 710px){
+  .app{
+    display: flex;
+    flex-direction: column;
+  }
+}
