--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,8 +1,8 @@
 .table{
-    margin-top: 12px;
     overflow: scroll;
-    height: 400px;
-    color: #6a5d5d
+    height: 500px;
+    color: #6a5d5d;
+    margin-top: 12px;
 }
 
 .table tr:nth-of-type(odd){
