--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 *{
 margin: 0;
+padding: 0;
 }
 body{
   background-color: #f5f6fa;
@@ -8,8 +9,7 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
-  margin-bottom: 12px;
+  padding: 12px 0;
 }
 .app{
   display: flex;
@@ -25,6 +25,7 @@ body{
 .app__stats{
 display: flex;
 justify-content: space-around;
+margin-bottom: 16px;
 
 }
 
